# Circepy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CIRCE_PROJECT_CHARTER.md  CLAUDE.md  COHORT_CLASSES_OVERVIEW.md  COHORT_EXPRESSION_TEST_COVERAGE.md  CONTRIBUTING.md  INSTALLATION.md  JAVA_CLASS_MAPPINGS.md  LICENSE  MANIFEST.in  PACKAGE_NAME_UPDATE.md  PUBLISHING_GUIDE.md  QUICK_START_PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  SCHEMA_VALIDATION_TEST.md  SECURITY.md  SQL_BUILDERS_DOCUMENTATION.md  analyze_java_schema_simple.py  benchmark_report.md  benchmark_report_databricks.md  circe_py  circe_sql.R  cohort_definition.py  coverage.json  diabetes_cohort.json  diabetes_cohort.sql  evaluation.md  fix_builder.py  fix_builder_v2.py  fix_builder_v3.py  fix_query_builder.py  gpt4o_cohort_builder_system_prompt.md  gpt4o_cohort_builder_system_prompt_SKILL_SECTION.md  java_cohort_expression_schema.json  pyproject.toml  python_cohort_expression_schema.json  render_fuckabouts.py  (+6 more)
.agent/: cohort_builder_enhancements.md
.github/workflows/: basic_tests.yml  nightly.yml  publish-pypi.yml  release.yml  ruff.yml
circe/: __init__.py  api.py  chat.py  cli.py  extensions.py  io.py  prompt_builder.py
circe/capr/: __init__.py  attrition.py  cohort.py  criteria.py  query.py  templates.py  window.py
circe/check/: __init__.py  check.py  checker.py  constants.py  warning.py  warning_severity.py
circe/cohort_builder/: __init__.py  builder.py  query_builder.py
circe/cohort_definition_set/: __init__.py  _checksum_store.py  _core.py  _generate.py
circe/cohortdefinition/: __init__.py  code_generator.py  cohort.py  cohort_expression_query_builder.py  concept_set_expression_query_builder.py  core.py  criteria.py  interfaces.py  utils.py  validators.py  yaml_utils.py
circe/evaluation/: __init__.py  builder.py  engine.py  markdown_render.py  models.py  sql_generator.py
circe/execution/: ARCHITECTURE.md  LIMITATIONS.md  README.md  TESTING.md  __init__.py  _dataclass.py  api.py  build_context.py  cohort_definition_set.py  cohort_generator.py  compat.py  criteria_compat.py  databricks_compat.py  errors.py  evaluation.py  hash_utils.py  ibis.py  ibis_compat.py  metrics.py  options.py  registry.py  typing.py
circe/extensions/: __init__.py
circe/features/: __init__.py  aggregation.py  builder.py  domain_tables.py  extractor.py  models.py  presets.py
circe/generation/: README.md  __init__.py  api.py  common.py  config.py  fingerprint.py  metadata.py  status.py  tables.py  validate.py
circe/helper/: __init__.py  cohort_modifiers.py
circe/skills/: __init__.py  cohort_builder.md  evaluation_builder.md
circe/sqlrender/: __init__.py  render.py
circe/tests/: __init__.py  test_package_structure.py
circe/vocabulary/: __init__.py  athena_integration.py  concept.py  (+1 more)
debug_app/: app.py  sandbox.py  utils.py
docs/: CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  cli.rst  conf.py  faq.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  troubleshooting.rst  waveform_extension.md
docs/api/: api_functions.rst  (+4 more)
examples/: README.md  athena_client_example.py  athena_integration_examples.py  basic_cohort.py  basic_cohort_fluent.py  chatbot_phenotype_builder.py  circepy_reticulate.R  cohort_from_yaml.py  complex_cohort.py  complex_cohort_fluent.py  generate_sql.py  json_to_code_demo.ipynb  prompt_builder_demo.py  reticulate_boot.py  secondary_primary_malignancy.py  test_athena_integration.py  type2_diabetes_cohort.ipynb  type2_diabetes_cohort.json  type2_diabetes_cohort.sql  validate_cohort.py  waveform_extension.py
prompts/: API_PITFALLS.md  EXAMPLES.md  README.md  fast_models_prompt.md  gpt4o_cohort_builder_system_prompt.md  reasoning_models_prompt.md  standard_models_prompt.md
scripts/: PROMPT_BUILDER_README.md  add_examples.txt  benchmark_cohort_generation.R  benchmark_cohort_generation_databricks.R  generate_skill.py  generate_skill_backup.py
tests/: conftest.py  test_advanced_features.py  test_athena_integration.py  test_base_population.py  test_builder_utils_coverage.py  test_builders.py  test_builders_sql.py  test_capr.py  test_checkers.py  test_cli.py  test_code_generator.py  test_cohort_builder.py  test_cohort_definition_set.py  test_cohort_expression.py  test_cohort_expression_query_builder_coverage.py  test_cohort_expression_query_builder_extended.py  test_cohort_generator.py  test_cohort_modification.py  test_cohort_modifiers.py  test_collection_methods.py  test_comparisons_coverage.py  test_concept_checker_factory_coverage.py  test_concept_set_expression_query_builder.py  test_concept_set_schemas.py  test_concept_sets_checkers.py  test_condition_era_sql_builder.py  test_condition_occurrence_sql_builder.py  test_criteria_classes.py  test_custom_era.py  test_date_adjustment_parity.py  test_device_exposure_sql.py  test_documentation.py  test_domain_modifiers.py  test_drug_era_sql_builder.py  test_drug_exposure_builder.py  test_evaluation_builder.py  test_evaluation_engine.py  test_evaluation_markdown_render.py  test_execution_api.py  test_execution_groups.py  (+37 more)
waveform_extension/: README.md  __init__.py  criteria.py  example_usage.py
(+3451 files in other folders)
