[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohdsi-circe-python-alpha"
version = "0.2.0"
description = "Python implementation of OHDSI CIRCE-BE for cohort definition and SQL generation"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
authors = [
    {name = "Jamie Gilbert", email = "gilbert@ohdsi.org"}
]
maintainers = [
    {name = "Jamie Gilbert", email = "gilbert@ohdsi.org"}
]
keywords = ["ohdsi", "circe", "cohort", "sql", "omop", "cdm", "healthcare", "observational-health"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "jinja2>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.1.0",
    "sqlglot>=23.0.0",
    "duckdb>=0.9.0",
    "ibis-framework[duckdb]>=11.0.0",
    "polars>=0.20.0",
    "deepdiff>=8.6.0",
    "javalang>=0.13.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
ibis = [
    "ibis-framework>=11.0.0; python_version >= '3.9'",
]
ibis-duckdb = [
    "ibis-framework[duckdb]>=11.0.0; python_version >= '3.9'",
]
ibis-postgres = [
    "ibis-framework[postgres]>=11.0.0; python_version >= '3.9'",
]
ibis-databricks = [
    "ibis-framework[databricks]>=11.0.0; python_version >= '3.9'",
]
waveform = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/OHDSI/Circepy"
Documentation = "https://ohdsi-circe-python-alpha.readthedocs.io/"
Repository = "https://github.com/OHDSI/Circepy.git"
Issues = "https://github.com/OHDSI/Circepy/issues"
Changelog = "https://github.com/OHDSI/Circepy/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/OHDSI/Circepy/issues"
"Source Code" = "https://github.com/OHDSI/Circepy"

[project.scripts]
circe = "circe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["circe*"]
exclude = ["circe.tests*"]

[tool.setuptools.package-data]
circe = ["py.typed"]
"circe.extensions.waveform" = ["templates/*.j2"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["circe"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/build/*",
    "*/dist/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=circe",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
# Allow longer lines for code and docstrings.
line-length = 110

# Exclude directories
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "circe-be",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), isort (`I`), and other useful rules
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["circe"]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"
